- make all modules use java 11 - enable CORS for tramites