@@ -34,6 +34,8 @@ public class AUBApplication {
             public void addCorsMappings(CorsRegistry registry) {
                 registry.addMapping("/v1/config/**")
                         .allowedOrigins("http://localhost:4200");
+                registry.addMapping("/v1/tramites/**")
+                        .allowedOrigins("http://localhost:4200");
             }
         };
     }
@@ -55,16 +57,14 @@ public class AUBApplication {
             LOGGER.warn("The host name could not be determined, using 'localhost' as fallback");
         }
 
-        var textBlock = """
-                
-                ----------------------------------------------------------
-                    Application "%s" is running! Access URLs:
-                    Local:              %s://localhost:%s%s
-                    External:           %s://%s:%s%s
-                    Active Profile(s):  %s
-                    Default Profile(s): %s
-                ----------------------------------------------------------
-                """.formatted(env.getProperty("spring.application.name"),
+        var textBlock = String.format("----------------------------------------------------------\n" +
+                        "                    Application \"%s\" is running! Access URLs:\n" +
+                        "                    Local:              %s://localhost:%s%s\n" +
+                        "                    External:           %s://%s:%s%s\n" +
+                        "                    Active Profile(s):  %s\n" +
+                        "                    Default Profile(s): %s\n" +
+                        "                ----------------------------------------------------------",
+                env.getProperty("spring.application.name"),
                 protocol,
                 serverPort,
                 contextPath,
